added latest overfitting experiments scripts

--- a/drafts/elbaroudy/mae.ipynb
+++ b/drafts/elbaroudy/mae.ipynb
@@ -25,18 +25,28 @@
     "import os\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "!export CUDA_VISIBLE_DEVICES=0\n",
-    "\n",
+    "import wandb\n",
     "from data import DummyDataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "4667ae3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = DummyDataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "4e233ff7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MaskedAutoencoderViT(img_size=(65, 650), \\\n",
+    "model = MaskedAutoencoderViT(img_size=(65, 4000), \\\n",
     "                                       patch_size=(5, 10), \\\n",
     "                                       in_chans=1)\n",
     "\n",
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "40c689fd",
    "metadata": {},
    "outputs": [
@@ -56,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'torch.Tensor'>\n"
+      "torch.Size([1, 65, 4000])\n"
      ]
     }
    ],
@@ -65,14 +75,14 @@
     "# # batch_size = 1\n",
     "# dataloader = DataLoader(dataset)\n",
     "\n",
-    "# for batch in dataloader: \n",
+    "# for batch in dataset: \n",
     "#     inputs, targets = batch \n",
-    "#     print(type(inputs))"
+    "#     print(inputs.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bb7dd99b",
    "metadata": {},
    "outputs": [],
@@ -83,20 +93,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "df590370",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33msama-elbaroudy\u001b[0m (\u001b[33mbrain-age\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.15.3"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/u/home/elbs/brain-age/drafts/elbaroudy/wandb/run-20230521_111040-h2wkdt80</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/brain-age/brain-age/runs/h2wkdt80' target=\"_blank\">mae_overfitting_EEG_sample_AdamW_optim</a></strong> to <a href='https://wandb.ai/brain-age/brain-age' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/brain-age/brain-age' target=\"_blank\">https://wandb.ai/brain-age/brain-age</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/brain-age/brain-age/runs/h2wkdt80' target=\"_blank\">https://wandb.ai/brain-age/brain-age/runs/h2wkdt80</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/home/elbs/.conda/envs/brain-age/lib/python3.11/site-packages/lightning/fabric/plugins/environments/slurm.py:165: PossibleUserWarning: The `srun` command is available on your system but is not used. HINT: If your intention is to run Lightning on SLURM, prepend your python command with `srun` like so: srun python /u/home/elbs/.conda/envs/brain-age/lib/python3.11/si ...\n",
+      "  rank_zero_warn(\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "`Trainer(overfit_batches=1.0)` was configured so 100% of the batches will be used..\n",
+      "/u/home/elbs/.conda/envs/brain-age/lib/python3.11/site-packages/lightning/fabric/plugins/environments/slurm.py:165: PossibleUserWarning: The `srun` command is available on your system but is not used. HINT: If your intention is to run Lightning on SLURM, prepend your python command with `srun` like so: srun python /u/home/elbs/.conda/envs/brain-age/lib/python3.11/si ...\n",
+      "  rank_zero_warn(\n",
+      "You are using a CUDA device ('NVIDIA A40') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name           | Type       | Params\n",
+      "----------------------------------------------\n",
+      "0 | patch_embed    | PatchEmbed | 52.2 K\n",
+      "1 | blocks         | ModuleList | 302 M \n",
+      "2 | norm           | LayerNorm  | 2.0 K \n",
+      "3 | decoder_embed  | Linear     | 524 K \n",
+      "4 | decoder_blocks | ModuleList | 25.2 M\n",
+      "5 | decoder_norm   | LayerNorm  | 1.0 K \n",
+      "6 | decoder_pred   | Linear     | 25.7 K\n",
+      "----------------------------------------------\n",
+      "328 M     Trainable params\n",
+      "8.0 M     Non-trainable params\n",
+      "336 M     Total params\n",
+      "1,344.498 Total estimated model params size (MB)\n",
+      "/u/home/elbs/.conda/envs/brain-age/lib/python3.11/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:430: PossibleUserWarning: The dataloader, train_dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 256 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  rank_zero_warn(\n",
+      "/u/home/elbs/.conda/envs/brain-age/lib/python3.11/site-packages/lightning/pytorch/loops/fit_loop.py:280: PossibleUserWarning: The number of training batches (1) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n",
+      "  rank_zero_warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "028abc3c7dbb436aa405b763a09bf451",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=100` reached.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁▁▁▁▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▄▅▅▅▅▅▅▆▆▆▆▆▇▇▇▇▇████</td></tr><tr><td>loss_epoch</td><td>█▃▂▂▂▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁</td></tr><tr><td>loss_step</td><td>█▁</td></tr><tr><td>trainer/global_step</td><td>▁▁▁▁▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▄▅▅▅▅▅▅▆▆▆▆▆▇▇▇▇▇████</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>99</td></tr><tr><td>loss_epoch</td><td>0.02745</td></tr><tr><td>loss_step</td><td>0.02745</td></tr><tr><td>trainer/global_step</td><td>99</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">mae_overfitting_EEG_sample_AdamW_optim</strong> at: <a href='https://wandb.ai/brain-age/brain-age/runs/h2wkdt80' target=\"_blank\">https://wandb.ai/brain-age/brain-age/runs/h2wkdt80</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20230521_111040-h2wkdt80/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "wandb.login()\n",
-    "logger = pl.loggers.WandbLogger(project=\"\", name=\"\", \n",
-    "                                save_dir=\"/data0/practical-sose23/brain-age\", log_model=False)\n",
+    "logger = pl.loggers.WandbLogger(project=\"brain-age\", name=\"mae_overfitting_EEG_sample_AdamW_optim\", \n",
+    "                                save_dir=\"/u/home/elbs/brain-age/drafts/elbaroudy\", log_model=False)\n",
     "\n",
-    "early_stop_callback = EarlyStopping(monitor=\"validation loss\", min_delta=0.00, patience=3, verbose=False, mode=\"max\")\n",
+    "# early_stop_callback = EarlyStopping(monitor=\"validation loss\", min_delta=0.00, patience=3, verbose=False, mode=\"max\")\n",
     "\n",
-    "trainer = pl.Trainer(callbacks=[early_stop_callback], overfit_batches=1.0, max_epochs=200, accelerator=\"gpu\", logger=logger)\n",
-    "trainer.fit(model, dataloader_train, dataloader_val)\n",
+    "trainer = pl.Trainer(overfit_batches=1.0, max_epochs=100, accelerator=\"gpu\", logger=logger, devices=1)\n",
+    "trainer.fit(model=model, train_dataloaders=dataloader)\n",
+    "# trainer.fit(model, dataloader_train, dataloader_val)\n",
     "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "69bf6611",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MaskedAutoencoderViT(\n",
+      "  (patch_embed): PatchEmbed(\n",
+      "    (proj): Conv2d(1, 1024, kernel_size=(5, 10), stride=(5, 10))\n",
+      "  )\n",
+      "  (blocks): ModuleList(\n",
+      "    (0-23): 24 x Block(\n",
+      "      (norm1): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+      "      (attn): Attention(\n",
+      "        (qkv): Linear(in_features=1024, out_features=3072, bias=True)\n",
+      "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "        (proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+      "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "      )\n",
+      "      (drop_path): Identity()\n",
+      "      (norm2): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+      "      (mlp): Mlp(\n",
+      "        (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
+      "        (act): GELU(approximate='none')\n",
+      "        (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
+      "        (drop): Dropout(p=0.0, inplace=False)\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      "  (norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+      "  (decoder_embed): Linear(in_features=1024, out_features=512, bias=True)\n",
+      "  (decoder_blocks): ModuleList(\n",
+      "    (0-7): 8 x Block(\n",
+      "      (norm1): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+      "      (attn): Attention(\n",
+      "        (qkv): Linear(in_features=512, out_features=1536, bias=True)\n",
+      "        (attn_drop): Dropout(p=0.0, inplace=False)\n",
+      "        (proj): Linear(in_features=512, out_features=512, bias=True)\n",
+      "        (proj_drop): Dropout(p=0.0, inplace=False)\n",
+      "      )\n",
+      "      (drop_path): Identity()\n",
+      "      (norm2): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+      "      (mlp): Mlp(\n",
+      "        (fc1): Linear(in_features=512, out_features=2048, bias=True)\n",
+      "        (act): GELU(approximate='none')\n",
+      "        (fc2): Linear(in_features=2048, out_features=512, bias=True)\n",
+      "        (drop): Dropout(p=0.0, inplace=False)\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      "  (decoder_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+      "  (decoder_pred): Linear(in_features=512, out_features=50, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt \n",
+    "print(model)"
    ]
   },
   {
@@ -108,12 +362,12 @@
    "source": [
     "\n",
     "\n",
-    "trainer = pl.Trainer(limit_train_batches=100, max_epochs=100, devices=1)\n",
+    "# trainer = pl.Trainer(limit_train_batches=100, max_epochs=100, devices=1)\n",
     "\n",
-    "trainer.fit(model=MaskedAutoencoderViT(img_size=(65, 650), \\\n",
-    "                                       patch_size=(5, 10), \\\n",
-    "                                       in_chans=1), \\\n",
-    "            train_dataloaders=dataloader)"
+    "# trainer.fit(model=MaskedAutoencoderViT(img_size=(65, 650), \\\n",
+    "#                                        patch_size=(5, 10), \\\n",
+    "#                                        in_chans=1), \\\n",
+    "#             train_dataloaders=dataloader)"
    ]
   },
   {
