after the 2nd presentation

--- a/drafts/ghandoura/data-exploration.ipynb
+++ b/drafts/ghandoura/data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4a23d63f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3d6035e3",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting parameters from /data0/practical-sose23/brain-age/data/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed.vhdr...\n",
+      "Extracting parameters from /data0/practical-sose23/brain-age/data/bap/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed.vhdr...\n",
       "Setting channel info structure...\n",
       "Reading 0 ... 300002  =      0.000 ...   300.002 secs...\n"
      ]
@@ -96,9 +96,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2857820/3482364882.py:5: RuntimeWarning: No coordinate information found for channels ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/tmp/ipykernel_1434619/383663397.py:5: RuntimeWarning: No coordinate information found for channels ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)\n",
-      "/tmp/ipykernel_2857820/3482364882.py:5: RuntimeWarning: Not setting positions of 64 misc channels found in montage:\n",
+      "/tmp/ipykernel_1434619/383663397.py:5: RuntimeWarning: Not setting positions of 64 misc channels found in montage:\n",
       "['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']\n",
       "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
       "  raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)\n"
@@ -107,10 +107,39 @@
    ],
    "source": [
     "# file_path = '../../data/healthy_controls/preprocessed/001_rest_preprocessed'\n",
-    "file_path = '/data0/practical-sose23/brain-age/data/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed'\n",
+    "file_path = '/data0/practical-sose23/brain-age/data/bap/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed'\n",
     "\n",
     "# Load EEG data into an MNE raw object\n",
     "raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "40146110",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(300003,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "median_channel = np.median(raw.get_data(), axis=0)\n",
+    "print(median_channel.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d29af9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_channel = raw.get_data().mean(axis=0)"
    ]
   },
   {
@@ -126,100 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a1e6c5f7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2857820/3255380464.py:1: RuntimeWarning: The unit for channel(s) AF3, AF4, C1, C2, C3, C4, C5, C6, CP1, CP2, CP3, CP4, CP5, CP6, CPz, Cz, F3, F4, F5, F6, F7, F8, FC1, FC2, FC3, FC4, FC5, FC6, FT10, FT7, FT8, FT9, Fp1, Fp2, Fpz, Fz, Iz, LE, O1, O2, Oz, P1, P2, P3, P4, P5, P6, P7, P8, PO10, PO3, PO4, PO7, PO8, PO9, POz, Pz, RE, T7, T8, TP10, TP7, TP8, TP9 has changed from NA to V.\n",
-      "  raw.set_channel_types({channel: 'eeg' for channel in raw_filtered.ch_names})\n",
-      "/tmp/ipykernel_2857820/3255380464.py:2: RuntimeWarning: The unit for channel(s) LE, RE has changed from V to NA.\n",
-      "  raw.set_channel_types({\"LE\":\"misc\", \"RE\":\"misc\"})\n"
+     "ename": "NameError",
+     "evalue": "name 'raw_filtered' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m raw\u001b[38;5;241m.\u001b[39mset_channel_types({channel: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124meeg\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m channel \u001b[38;5;129;01min\u001b[39;00m raw_filtered\u001b[38;5;241m.\u001b[39mch_names})\n\u001b[1;32m      2\u001b[0m raw\u001b[38;5;241m.\u001b[39mset_channel_types({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLE\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmisc\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRE\u001b[39m\u001b[38;5;124m\"\u001b[39m:\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmisc\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'raw_filtered' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
-       "    <tr>\n",
-       "        <th>Measurement date</th>\n",
-       "        \n",
-       "        <td>Unknown</td>\n",
-       "        \n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Experimenter</th>\n",
-       "        \n",
-       "        <td>Unknown</td>\n",
-       "        \n",
-       "    </tr>\n",
-       "        <th>Participant</th>\n",
-       "        \n",
-       "        <td>Unknown</td>\n",
-       "        \n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Digitized points</th>\n",
-       "        \n",
-       "        <td>4 points</td>\n",
-       "        \n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Good channels</th>\n",
-       "        <td>63 EEG, 2 misc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Bad channels</th>\n",
-       "        <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>EOG channels</th>\n",
-       "        <td>Not available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>ECG channels</th>\n",
-       "        <td>Not available</td>\n",
-       "    \n",
-       "    <tr>\n",
-       "        <th>Sampling frequency</th>\n",
-       "        <td>1000.00 Hz</td>\n",
-       "    </tr>\n",
-       "    \n",
-       "    \n",
-       "    <tr>\n",
-       "        <th>Highpass</th>\n",
-       "        <td>0.00 Hz</td>\n",
-       "    </tr>\n",
-       "    \n",
-       "    \n",
-       "    <tr>\n",
-       "        <th>Lowpass</th>\n",
-       "        <td>500.00 Hz</td>\n",
-       "    </tr>\n",
-       "    \n",
-       "    \n",
-       "    \n",
-       "    <tr>\n",
-       "        <th>Filenames</th>\n",
-       "        <td>Exp_eyes_closed_vpH38_eyes_closed.dat</td>\n",
-       "    </tr>\n",
-       "    \n",
-       "    <tr>\n",
-       "        <th>Duration</th>\n",
-       "        <td>00:05:01 (HH:MM:SS)</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<RawBrainVision | Exp_eyes_closed_vpH38_eyes_closed.dat, 65 x 300003 (300.0 s), ~148.8 MB, data loaded>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
