create formatter to interpolate the channels in the target dataset and check for data drift

--- a/drafts/schwarz/data-exploration.ipynb
+++ b/drafts/schwarz/data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9c96e092",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bf3197f1",
    "metadata": {},
    "outputs": [],
@@ -37,24 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dee7d11a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m pathlib\u001b[38;5;241m.\u001b[39mPath(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../data/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m data_dir\u001b[38;5;241m.\u001b[39mis_dir()\n\u001b[1;32m      4\u001b[0m data_dir_healthy \u001b[38;5;241m=\u001b[39m data_dir \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhealthy_controls/preprocessed\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m data_dir_healthy\u001b[38;5;241m.\u001b[39mis_dir()\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_dir = pathlib.Path(\"../../data/\")\n",
+    "data_dir = pathlib.Path(\"/data0/practical-sose23/brain-age/data/bap/preprocessed/\")\n",
     "assert data_dir.is_dir()\n",
     "\n",
     "data_dir_healthy = data_dir / \"healthy_controls/preprocessed\"\n",
