--- a/drafts/schwarz/extract_rest_hbn.ipynb
+++ b/drafts/schwarz/extract_rest_hbn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "9c96e092",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "dee7d11a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "4fa13afa",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
        "2633"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,13 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ff102ab9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dest_dir = data_dir.parent / \"rest\"\n",
+    "dest_dir = data_dir.parent / \"unzipped\" / \"rest\"\n",
     "assert dest_dir.is_dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bbf8519b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_substring = \"raw/mat_format/RestingState.mat\""
    ]
   },
   {
@@ -86,16 +96,6 @@
    "metadata": {},
    "source": [
     "### Specify type of files to extract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbf8519b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_substring = \"preprocessed/mat_format/RestingState.mat\""
    ]
   },
   {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "32cb46ad",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "5aa0dbb9",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
        " ...]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,17 +1167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "d256428d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2633, 1208)"
+       "(2633, 2260)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
