bap and hbn preprocessing

--- a/drafts/ghandoura/data-exploration.ipynb
+++ b/drafts/ghandoura/data-exploration.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ddd75319",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting parameters from /data0/practical-sose23/brain-age/data/bap/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed.vhdr...\n",
+      "Extracting parameters from /data0/practical-sose23/brain-age/data/bap/raw/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed.vhdr...\n",
       "Setting channel info structure...\n",
       "Reading 0 ... 300002  =      0.000 ...   300.002 secs...\n"
      ]
@@ -98,9 +98,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1434619/383663397.py:5: RuntimeWarning: No coordinate information found for channels ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/tmp/ipykernel_3457545/2670950836.py:5: RuntimeWarning: No coordinate information found for channels ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)\n",
-      "/tmp/ipykernel_1434619/383663397.py:5: RuntimeWarning: Not setting positions of 64 misc channels found in montage:\n",
+      "/tmp/ipykernel_3457545/2670950836.py:5: RuntimeWarning: Not setting positions of 64 misc channels found in montage:\n",
       "['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz', 'Oz', 'FC1', 'FC2', 'CP1', 'CP2', 'FC5', 'FC6', 'CP5', 'CP6', 'TP9', 'TP10', 'LE', 'RE', 'P1', 'P2', 'C1', 'C2', 'FT9', 'FT10', 'AF3', 'AF4', 'FC3', 'FC4', 'CP3', 'CP4', 'PO3', 'PO4', 'F5', 'F6', 'C5', 'C6', 'P5', 'P6', 'PO9', 'Iz', 'FT7', 'FT8', 'TP7', 'TP8', 'PO7', 'PO8', 'Fpz', 'PO10', 'CPz', 'POz']\n",
       "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
       "  raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)\n"
@@ -109,10 +109,28 @@
    ],
    "source": [
     "# file_path = '../../data/healthy_controls/preprocessed/001_rest_preprocessed'\n",
-    "file_path = '/data0/practical-sose23/brain-age/data/bap/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed'\n",
+    "file_path = '/data0/practical-sose23/brain-age/data/bap/raw/healthy_controls/preprocessed/Exp_eyes_closed_vpH38_eyes_closed'\n",
     "\n",
     "# Load EEG data into an MNE raw object\n",
     "raw = mne.io.read_raw_brainvision(file_path + '.vhdr', preload=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "638e9a75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(65, 300003)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(raw.get_data().shape)"
    ]
   },
   {
