dataset.py and preprocessing_utils.py

--- a/drafts/ghandoura/data-exploration.ipynb
+++ b/drafts/ghandoura/data-exploration.ipynb
@@ -1830,6 +1830,151 @@
    "cell_type": "raw",
    "id": "e3f9e3bf",
    "metadata": {},
+   "source": [
+    "import sys\n",
+    "sys.path.append('../utils/')\n",
+    "from format_hbn import HBNFormatter\n",
+    "\n",
+    "hbn_formatter = get_hbn_formatter(datasets_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cdace2ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "file_path = '/data0/practical-sose23/brain-age/data/bap/preprocessed/chronic_pain_patients/chronic_back_pain/preprocessed/Exp_eyes_closed_vp42_eyes_closed.pickle'\n",
+    "\n",
+    "with open(file_path, mode='rb') as in_file:\n",
+    "    eeg_obj = pickle.load(in_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "34b82f76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
+       "    <tr>\n",
+       "        <th>Measurement date</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Experimenter</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "        <th>Participant</th>\n",
+       "        \n",
+       "        <td>Unknown</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Digitized points</th>\n",
+       "        \n",
+       "        <td>4 points</td>\n",
+       "        \n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Good channels</th>\n",
+       "        <td>63 EEG, 2 misc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>Bad channels</th>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>EOG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <th>ECG channels</th>\n",
+       "        <td>Not available</td>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Sampling frequency</th>\n",
+       "        <td>135.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Highpass</th>\n",
+       "        <td>0.50 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Lowpass</th>\n",
+       "        <td>45.00 Hz</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    \n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Filenames</th>\n",
+       "        <td>Exp_eyes_closed_vp42_eyes_closed.dat</td>\n",
+       "    </tr>\n",
+       "    \n",
+       "    <tr>\n",
+       "        <th>Duration</th>\n",
+       "        <td>00:05:00 (HH:MM:SS)</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<RawBrainVision | Exp_eyes_closed_vp42_eyes_closed.dat, 65 x 40501 (300.0 s), ~20.1 MB, data loaded>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eeg_obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "267a65f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4512"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "# dir_preprocessed = Path(\"/data0/practical-sose23/brain-age/data/bap/preprocessed/\")\n",
+    "dir_preprocessed = Path(\"/data0/practical-sose23/brain-age/data/hbn/preprocessed\")\n",
+    "len(list(dir_preprocessed.rglob(\"*.*\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4fdc226",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
