--- a/drafts/ghandoura/data-exploration.ipynb
+++ b/drafts/ghandoura/data-exploration.ipynb
@@ -1947,26 +1947,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "267a65f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4512"
+       "2095"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from pathlib import Path\n",
-    "# dir_preprocessed = Path(\"/data0/practical-sose23/brain-age/data/bap/preprocessed/\")\n",
-    "dir_preprocessed = Path(\"/data0/practical-sose23/brain-age/data/hbn/preprocessed\")\n",
-    "len(list(dir_preprocessed.rglob(\"*.*\")))"
+    "dir_preprocessed = Path(\"/data0/practical-sose23/brain-age/data/bap/preprocessed/\")\n",
+    "# dir_preprocessed = Path(\"/data0/practical-sose23/brain-age/data/hbn/preprocessed\")\n",
+    "len(list(dir_preprocessed.rglob(\"*.npy\")))"
    ]
   },
   {
