commiting latest training script changes

--- a/drafts/elbaroudy/mae.ipynb
+++ b/drafts/elbaroudy/mae.ipynb
@@ -31,17 +31,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "4667ae3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 40, 6500])\n",
+      "torch.Size([1, 40, 6500])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.4688, grad_fn=<DivBackward0>),\n",
+       " tensor([[[-0.1726, -0.4612, -0.4237,  ...,  0.6341,  0.2463,  0.0851],\n",
+       "          [ 0.1442, -0.3997, -0.1494,  ...,  0.5168,  0.2350, -0.1392],\n",
+       "          [ 0.1119, -0.3566, -0.0925,  ...,  0.5377,  0.1991, -0.1270],\n",
+       "          ...,\n",
+       "          [-0.2660, -0.6359, -0.4837,  ...,  0.5426,  0.2066,  0.1187],\n",
+       "          [-0.3165, -0.5330, -0.4960,  ...,  0.5831,  0.1990,  0.0689],\n",
+       "          [-0.0423, -0.4042, -0.3733,  ...,  0.5426,  0.2216, -0.0615]]],\n",
+       "        grad_fn=<SliceBackward0>),\n",
+       " tensor([[0., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
+       "          0., 1., 1., 0., 0., 1., 1., 0., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
+       "          1., 0., 0., 1.]]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dataset = DummyDataset()"
+    "# dataset = DummyDataset()\n",
+    "dummy_eeg_input = torch.rand((1, 1, 65, 4000))\n",
+    "model = MaskedAutoencoderViT(img_size=(65, 4000), \\\n",
+    "                                       patch_size=(65, 100), \\\n",
+    "                                       in_chans=1)\n",
+    "model(dummy_eeg_input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4e233ff7",
    "metadata": {},
    "outputs": [],
